--- a/HTML.html
+++ b/HTML.html
@@ -15,9 +15,6 @@
         <span>o</span>
         <span>n</span>
         <span>.</span>
-        
-      </h1>
-      <h1>
         <span>C</span>
         <span>K</span>
       </h1>
@@ -47,8 +44,9 @@
       <p>
         Greetings! I'm Jason, a passionate software developer.<br>
         Here, I share my journey through the world of coding and showcase my projects. <br>
-        From crafting efficient algorithms to designing intuitive interfaces, I love turning ideas into functional software. <br>
-        Explore my work, insights, and tutorials. Let's shape the future, line by line of code!<span class="Blinkingcursor">|</span>
+        From crafting efficient algorithms to designing intuitive interfaces, <br>
+        I love turning ideas into functional software. <br>
+        Explore my work, insights, and tutorials. Let's shape the future, line by line of code!;<span class="Blinkingcursor">|</span>
       </p>
     </div>
 
