--- a/HTML.html
+++ b/HTML.html
@@ -4,17 +4,18 @@
     <title>Your Name - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="Personalwebsite.css">
     <style>
-         body {
-            transition: background-color 0.3s;
+        body {
+            transition: background-color 1s;
         }
     </style>
 </head>
-<body>   
+<body>      
     <section>
-        <div class="topheader">
-            <marquee direction="up" height="120px" >
+        <div>
+            <marquee direction="up" height="120px">
                 JASON 
             </marquee>
+     
         </div>
     </section>
     <div class="flip-card">
@@ -24,13 +25,13 @@
           </div>
           <div class="flip-card-back">
             <h1>
-            Hi, I'm Jason Christopher — where computer algorithms meet athletic algorithms, coding by day and scoring by night!
+                🤗
             </h1>
           </div>
         </div>
     </div>
-    <section> 
-        <div class="subheader">
+    <section>
+        <div>
             <marquee direction="down" height="120px">
                 CHRISTOPHER
             </marquee>
@@ -41,9 +42,39 @@
     <div class="arrow bounce"></div>
     <section class="page_2">
         <div>
-            <h id="content" class="hidden">
-                A little about me 
+            <h id="content" class="hidden blur-effect magnify">
+                <span>A</span>
+                <span>l</span><span>i</span><span>t</span><span>t</span><span>l</span><span>e</span>
+                <span>a</span><span>b</span><span>o</span><span>u</span><span>t</span>
+                <span>m</span><span>e</span>
             </h>
+        </div>
+    </section>
+    
+    <div class="container left timeline-container blur">
+        <div class="content">
+            <h2>Arrival</h2>
+            <p>On a random Wednesday in August 2003, I made my grand entrance into the world. My first word was 'uh-oh', a little forecast of what was to come... </p>
+        </div>
+    </div>
+
+    <div class="container left timeline-container1 blur">
+        <div class="content" >
+            <h2>Mid-life crisis</h2>
+            <p>March 2020, when a 'well deserved 2 week holiday' turned into 2 years at home. Then in 2021, I am met with a difficult choice of deciding a career I want to pursue for the <p1>REST OF MY LIFE...</p1></p>
+        </div>
+    </div>
+
+    <div class="container left timeline-container2 blur">
+        <div class="content">
+            <h2 >Present day</h2>
+            <p >Well... Fast forward a couple years and now im a computer science student struggling with calc 4. I am currently enrolled in BSc Computer Science with Math minor in the <span class="glowing-text">University of Alberta<span></p>
+        </div>
+    </div>
+
+    <section>
+        <div id="page3">
+            wew
         </div>
 
     </section>
