--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </div>
 
     <section>
-        <div id="page3">
-            wew
+        <div>
+            <p id="page3" class="hidden content_3">weww</p>
         </div>
 
     </section>
