--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Other head elements -->
+</head>
+
     <title>Your Name - Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="Personalwebsite.css">
+    <link rel="stylesheet" type="text/css" href="Modified_Personalwebsite.css">
     <style>
         body {
             transition: background-color 1s;
@@ -38,7 +43,7 @@
         </div>    
 
     </section>
-    <script src="Personalwebsite.js"></script>
+    <script src="Modified_Personalwebsite.js"></script>
     <div class="arrow bounce"></div>
     <section class="page_2">
         <div>
