--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
     <title>Your Name - Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="Modified_Personalwebsite.css">
+    <link rel="stylesheet" type="text/css" href="Personalwebsite.css">
     <style>
         body {
             transition: background-color 1s;
@@ -17,10 +17,9 @@
 <body>      
     <section>
         <div>
-            <marquee direction="up" height="120px">
-                JASON 
-            </marquee>
-     
+            <div class="custom-marquee">
+                <div>JASON</div>
+            </div>
         </div>
     </section>
     <div class="flip-card">
@@ -37,13 +36,13 @@
     </div>
     <section>
         <div>
-            <marquee direction="down" height="120px">
-                CHRISTOPHER
-            </marquee>
+            <div class="custom-marquee1">
+                <div>Christopher</div>
+            </div>
         </div>    
 
     </section>
-    <script src="Modified_Personalwebsite.js"></script>
+    <script src="Personalwebsite.js"></script>
     <div class="arrow bounce"></div>
     <section class="page_2">
         <div>
